# controllers/category.go
@@ -13,6 +13,12 @@ import (
 	"strconv"
 )
 
+// @Summary 大类列表
+// @Description 大类
+// @Accept json
+// @Produce json
+// @Success 200 {string} string "{"code":200,"data":"","msg":"ok"}"
+// @Router /wx/category [get]
 func CategoryList(c *gin.Context) {
 
 	list, count, err := models.CategoryList()
@@ -26,13 +32,18 @@ func CategoryList(c *gin.Context) {
 	}
 
 	m := make(map[string]interface{}, 0)
-
 	m["count"] = count
 	m["list"] = list
-
 	HandleOk(c, m)
 }
 
+// @Summary 添加大类
+// @Description 添加大类
+// @Accept json
+// @Produce json
+// @Param param body models.Category true "{}"
+// @Success 200 {string} string "{"code":200,"data":"","msg":"ok"}"
+// @Router /category [post]
 func CategoryAdd(c *gin.Context) {
 	category := new(models.Category)
 
@@ -50,6 +61,14 @@ func CategoryAdd(c *gin.Context) {
 	HandleOk(c, "success")
 }
 
+// @Summary 更新大类
+// @Description 更新大类
+// @Accept json
+// @Produce json
+// @Param id path int true "id"
+// @Param param body models.Category true "{}"
+// @Success 200 {string} string "{"code":200,"data":"","msg":"ok"}"
+// @Router /category/{id} [post]
 func CategoryUpdate(c *gin.Context) {
 	idstr := c.Param("id")
 
